# Understanding-RAG

./: .env  Approach2.ipynb  beginning.ipynb  pers_app.ipynb  pyproject.toml  scraped_content.txt  scraping.py
chroma_google_genai/: chroma.sqlite3
