[project]
name = "understanding-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.5",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-ollama>=1.0.1",
    "langchainhub>=0.1.21",
    "langdetect>=1.0.9",
    "spacy>=3.8.11",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0.0",
]
